--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,104 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+Week5/data/JetClass_Pythia_train_100M_part0/HToBB_000.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToBB_001.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToBB_002.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToBB_003.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToBB_004.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToBB_005.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToBB_006.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToBB_007.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToBB_008.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToBB_009.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToCC_000.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToCC_001.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToCC_002.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToCC_003.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToCC_004.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToCC_005.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToCC_006.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToCC_007.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToCC_008.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToCC_009.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToGG_000.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToGG_001.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToGG_002.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToGG_003.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToGG_004.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToGG_005.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToGG_006.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToGG_007.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToGG_008.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToGG_009.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW2Q1L_000.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW2Q1L_001.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW2Q1L_002.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW2Q1L_003.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW2Q1L_004.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW2Q1L_005.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW2Q1L_006.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW2Q1L_007.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW2Q1L_008.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW2Q1L_009.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW4Q_000.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW4Q_001.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW4Q_002.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW4Q_003.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW4Q_004.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW4Q_005.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW4Q_006.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW4Q_007.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW4Q_008.root
+Week5/data/JetClass_Pythia_train_100M_part0/HToWW4Q_009.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBar_000.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBar_001.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBar_002.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBar_003.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBar_004.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBar_005.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBar_006.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBar_007.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBar_008.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBar_009.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBarLep_000.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBarLep_001.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBarLep_002.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBarLep_003.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBarLep_004.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBarLep_005.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBarLep_006.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBarLep_007.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBarLep_008.root
+Week5/data/JetClass_Pythia_train_100M_part0/TTBarLep_009.root
+Week5/data/JetClass_Pythia_train_100M_part0/WToQQ_000.root
+Week5/data/JetClass_Pythia_train_100M_part0/WToQQ_001.root
+Week5/data/JetClass_Pythia_train_100M_part0/WToQQ_002.root
+Week5/data/JetClass_Pythia_train_100M_part0/WToQQ_003.root
+Week5/data/JetClass_Pythia_train_100M_part0/WToQQ_004.root
+Week5/data/JetClass_Pythia_train_100M_part0/WToQQ_005.root
+Week5/data/JetClass_Pythia_train_100M_part0/WToQQ_006.root
+Week5/data/JetClass_Pythia_train_100M_part0/WToQQ_007.root
+Week5/data/JetClass_Pythia_train_100M_part0/WToQQ_008.root
+Week5/data/JetClass_Pythia_train_100M_part0/WToQQ_009.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZJetsToNuNu_000.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZJetsToNuNu_001.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZJetsToNuNu_002.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZJetsToNuNu_003.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZJetsToNuNu_004.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZJetsToNuNu_005.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZJetsToNuNu_006.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZJetsToNuNu_007.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZJetsToNuNu_008.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZJetsToNuNu_009.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZToQQ_000.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZToQQ_001.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZToQQ_002.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZToQQ_003.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZToQQ_004.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZToQQ_005.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZToQQ_006.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZToQQ_007.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZToQQ_008.root
+Week5/data/JetClass_Pythia_train_100M_part0/ZToQQ_009.root
+Week5/data/JetClass_Pythia_train_100M_part0/JetClass_Pythia_test_20M.tar
